--- a/pages/18590.html
+++ b/pages/18590.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -517,7 +517,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Poincare+lemma'>Poincare lemma</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+lemma'>Poincare lemma</a></p>
 </li>
 
 <li>
@@ -563,9 +563,9 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/shape+modality'>shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a>)</p>
+<p>(<a class='existingWikiWord' href='/nlab/show/shape+modality'>shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a>)</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ʃ</mi><mo>⊣</mo><mo>♭</mo><mo>⊣</mo><mo>♯</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(&amp;#643; \dashv \flat \dashv \sharp )</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><merror><mtext>Unknown character</mtext></merror><merror><mtext>Unknown character</mtext></merror><mo>⊣</mo><mo>♭</mo><mo>⊣</mo><mo>♯</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(ʃ \dashv \flat \dashv \sharp )</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -583,9 +583,9 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/dR-shape+modality'>dR-shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dR-flat+modality'>dR-flat modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/dR-shape+modality'>dR-shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dR-flat+modality'>dR-flat modality</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ʃ</mi> <mi>dR</mi></msub><mo>⊣</mo><msub><mo>♭</mo> <mi>dR</mi></msub></mrow><annotation encoding='application/x-tex'>&amp;#643;_{dR} \dashv \flat_{dR}</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><merror><mtext>Unknown character</mtext></merror><msub><merror><mtext>Unknown character</mtext></merror> <mi>dR</mi></msub><mo>⊣</mo><msub><mo>♭</mo> <mi>dR</mi></msub></mrow><annotation encoding='application/x-tex'>ʃ_{dR} \dashv \flat_{dR}</annotation></semantics></math></p>
 </li>
 </ul>
 
@@ -599,9 +599,9 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+flat+modality'>infinitesimal flat modality</a>)</p>
+<p>(<a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+flat+modality'>infinitesimal flat modality</a>)</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ℜ</mi><mo>⊣</mo><mi>ℑ</mi><mo>⊣</mo><mi>&amp;</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Re \dashv \Im \dashv \&amp;)</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ℜ</mi><mo>⊣</mo><mi>ℑ</mi><mo>⊣</mo><mi>&amp;</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Re \dashv \Im \dashv \&amp;)</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -623,12 +623,12 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/bosonic+modality'>fermionic modality</a> <math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/bosonic+modality'>bosonic modality</a> <math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/bosonic+modality'>fermionic modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/bosonic+modality'>bosonic modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo>⇉</mo><mo>⊣</mo><mo>⇝</mo><mo>⊣</mo><mi>Rh</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\rightrightarrows \dashv \rightsquigarrow \dashv Rh)</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo>⇉</mo><mo>⊣</mo><mo>⇝</mo><mo>⊣</mo><mi>Rh</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\rightrightarrows \dashv \rightsquigarrow \dashv Rh)</annotation></semantics></math></p>
 </li>
 </ul>
-<div class='maruku-equation' id='Diagram'><math class='maruku-mathml' display='block' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>id</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>id</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>fermionic</mi></mover></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>Rh</mi></mtd> <mtd><mover><mrow></mrow><mi>rheonomic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>reduced</mi></mover></mtd> <mtd><mi>ℜ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>&amp;</mi></mtd> <mtd><mover><mrow></mrow><mtext>étale</mtext></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>cohesive</mi></mover></mtd> <mtd><mi>ʃ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♭</mo></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd> <mtd><mo>♭</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♯</mo></mtd> <mtd><mover><mrow></mrow><mi>continuous</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>∅</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='Diagram'><math class='maruku-mathml' display='block' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>id</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>id</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>fermionic</mi></mover></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>Rh</mi></mtd> <mtd><mover><mrow></mrow><mi>rheonomic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>reduced</mi></mover></mtd> <mtd><mi>ℜ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>&amp;</mi></mtd> <mtd><mover><mrow></mrow><mtext>étale</mtext></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>cohesive</mi></mover></mtd> <mtd><merror><mtext>Unknown character</mtext></merror><merror><mtext>Unknown character</mtext></merror></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♭</mo></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd> <mtd><mo>♭</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♯</mo></mtd> <mtd><mover><mrow></mrow><mi>continuous</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>∅</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
     &amp;&amp; id &amp;\dashv&amp; id 
     \\
@@ -650,7 +650,7 @@ margin-left: 0em;
     \\
     &amp;&amp; \vee &amp;&amp; \vee
     \\
-    &amp;\stackrel{cohesive}{}&amp; &amp;#643; &amp;\dashv&amp; \flat &amp; \stackrel{discrete}{}
+    &amp;\stackrel{cohesive}{}&amp; ʃ &amp;\dashv&amp; \flat &amp; \stackrel{discrete}{}
     \\
     &amp;&amp; \bot &amp;&amp; \bot
     \\
@@ -670,7 +670,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/smooth+algebra'>smooth algebra</a> (<math class='maruku-mathml' display='inline' id='mathml_ca6181c36685ae5a66b36cb8e1c93054814ab36e_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup></mrow><annotation encoding='application/x-tex'>C^\infty</annotation></semantics></math>-ring)</p>
+<p><a class='existingWikiWord' href='/nlab/show/smooth+algebra'>smooth algebra</a> (<math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup></mrow><annotation encoding='application/x-tex'>C^\infty</annotation></semantics></math>-ring)</p>
 </li>
 
 <li>
@@ -828,7 +828,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#variants'>Variants</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#variants'>Variants</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a> or <a class='existingWikiWord' href='/nlab/show/differential+geometry'>differential geometry</a>, a <em>derivative</em> is the result of applying <a class='existingWikiWord' href='/nlab/show/differentiation'>differentiation</a> to a <a class='existingWikiWord' href='/nlab/show/differentiable+map'>differentiable map</a>.</p>
@@ -909,19 +909,27 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/Kock-Lawvere+axiom'>Kock-Lawvere axiom</a> for the <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatization</a> of <a class='existingWikiWord' href='/nlab/show/differentiation'>differentiation</a> in <a class='existingWikiWord' href='/nlab/show/synthetic+differential+geometry'>synthetic differential geometry</a> was introduced in</p>
+
+<ul>
+<li id='Kock77'><a class='existingWikiWord' href='/nlab/show/Anders+Kock'>Anders Kock</a>, <em>A simple axiomatics for differentiation</em>, Mathematica Scandinavica Vol. 40, No. 2 (October 24, 1977), pp. 183-193 (<a href='http://www.jstor.org/stable/24491223'>JSTOR</a>)</li>
+</ul>
+
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on September  6, 2017 10:44:12 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (209.93.157.137)
+  Revised on November  4, 2017 19:54:07 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/derivative" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/derivative/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/derivative" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/derivative" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/derivative" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/derivative/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/derivative" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/derivative" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
