--- a/pages/18646.html
+++ b/pages/18646.html
@@ -534,6 +534,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microlocal+analysis'>microlocal analysis</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -557,14 +561,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 31, 2017 13:09:53 
+  Revised on November  6, 2017 07:20:52 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ultraviolet+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ultraviolet+divergence/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/ultraviolet+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ultraviolet+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/ultraviolet+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ultraviolet+divergence/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/ultraviolet+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ultraviolet+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
