--- a/pages/3586.html
+++ b/pages/3586.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -339,7 +339,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/locally+convex+space'>locally convex topological vector space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
 </li>
 
 <li>
@@ -454,7 +454,7 @@ margin-left: 0em;
 
 <p>In the original sense, <em>microlocal analysis</em> (e.g. <a href='#Strohmaier09'>Strohmaier 09</a>) is the study of the <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a> of <a class='existingWikiWord' href='/nlab/show/distribution'>generalized functions</a>/<a class='existingWikiWord' href='/nlab/show/distribution'>distributions</a> with attention paid not just to their <a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>singular support</a>, i.e. to the points around which they are singular as generalized functions, but also the directions of <a class='existingWikiWord' href='/nlab/show/propagation+of+singularities+theorem'>propagation of their singularities</a> at each singular point, which is the set of <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>covectors</a> known as their <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a>. This extra directional (“microlocal”) information governs the basic operations on distributions, notably the <a class='existingWikiWord' href='/nlab/show/pullback+of+a+distribution'>pullback of distributions</a> and the <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a>.</p>
 
-<p>Since the wave front set is the set of (co-)directions along which, locally, the <a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of distributions</a> is not rapidly decreasing (the set of “UV divergencies” in applications to <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>), much of microlocal analysis is concerned with constructions related to Fourier transformation, such as the discussion of <a class='existingWikiWord' href='/nlab/show/pseudodifferential+operator'>pseudodifferential operators</a>.</p>
+<p>Since the wave front set is the set of (co-)directions along which, locally, the <a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of distributions</a> is not rapidly decreasing (the set of “<a class='existingWikiWord' href='/nlab/show/ultraviolet+divergence'>UV divergences</a>” in applications to <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>), much of microlocal analysis is concerned with constructions related to Fourier transformation, such as the discussion of <a class='existingWikiWord' href='/nlab/show/pseudodifferential+operator'>pseudodifferential operators</a>.</p>
 
 <p>Microlocal analysis in this sense was introduced by (<a href='#Sato70'>Sato 70</a>), soon followed by (<a href='#Hoermander71'>Hörmander 71</a>, <a href='#Hoermander83'>Hörmander 83</a>) who both introduced the notion of <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a>. This microlocal point of view was then extended to <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>sheaf theory</a> by <a href='#KashiwaraSchapira82'>Kashiwara-Schapira 82</a>, <a href='#KashiwaraSchapira85'>Kashiwara-Schapira 82</a>) who introduced the notion of <em><span class='newWikiWord'>microsupport<a href='/nlab/new/microsupport'>?</a></span></em> of sheaves giving rise to <em><a class='existingWikiWord' href='/nlab/show/microlocal+sheaf+theory'>microlocal sheaf theory</a></em> (see <a href='#Schapira17'>Schapira 17</a>). Beware that some authors still use the term “microlocal analysis” for this sheaf theoretic concept.</p>
 
@@ -468,7 +468,7 @@ margin-left: 0em;
 
 <h2 id='in_perturbative_quantum_field_theory'>In perturbative quantum field theory</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> microlocal analysis is used to define <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebras</a> of <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> on <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free fields</a>: The product on these algebras is a <a class='existingWikiWord' href='/nlab/show/Moyal+deformation+quantization'>Moyal star-product</a> induced from the <a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, whose <a class='existingWikiWord' href='/nlab/show/integral+transform'>integral kernel</a> is the <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a> on the given <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>globally hyperbolic spacetime</a>. But the <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a> of this propagator is such that its UV-divergencies in general collide with those of <span class='newWikiWord'>local functionals<a href='/nlab/new/local+functionals'>?</a></span> (<a href='Wick+algebra#CompactlySupportedPolynomialLocalDensities'>here</a>). This is fixed by modifying the causal propagator to a <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard propagator</a>. The resulting change of the algebra structure is known as <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordering</a> of quantum fields. It yields the properly defined <em><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebras</a></em> of free quantum fields.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> microlocal analysis is used to define <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebras</a> of <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> on <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free fields</a>: The product on these algebras is a <a class='existingWikiWord' href='/nlab/show/Moyal+deformation+quantization'>Moyal star-product</a> induced from the <a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, whose <a class='existingWikiWord' href='/nlab/show/integral+transform'>integral kernel</a> is the <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a> on the given <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>globally hyperbolic spacetime</a>. But the <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a> of this propagator is such that its <a class='existingWikiWord' href='/nlab/show/ultraviolet+divergence'>UV-divergences</a> in general collide with those of <span class='newWikiWord'>local functionals<a href='/nlab/new/local+functionals'>?</a></span> (<a href='Wick+algebra#CompactlySupportedPolynomialLocalDensities'>here</a>). This is fixed by modifying the causal propagator to a <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard propagator</a>. The resulting change of the algebra structure is known as <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordering</a> of quantum fields. It yields the properly defined <em><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebras</a></em> of free quantum fields.</p>
 
 <p>As the name suggests, normal ordering was originally an operation implementd simply by re-arranging the order of <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier</a> modes of quantum fields. The desire to generalize this procedure from <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> to general <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>globally hyperbolic Lorentzian manifolds</a> was what required use of tools from microlocal analysis. See at <em><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>locally covariant perturbative AQFT</a></em> and at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em> for more.</p>
 
@@ -555,14 +555,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September  1, 2017 13:55:49 
+  Revised on November  6, 2017 07:20:33 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/microlocal+analysis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/microlocal+analysis/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/microlocal+analysis" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/microlocal+analysis" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/microlocal+analysis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/microlocal+analysis/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/microlocal+analysis" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/microlocal+analysis" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
